--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style="margin: 0; padding: 0; font-family: 'Roboto';">
+  <body style="margin: 0; padding: 0; font-family: 'Roboto'; background-color: #f5f5f5;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
