--- a/public/index.html
+++ b/public/index.html
@@ -4,28 +4,27 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Portfolio website"
+      content="Want to know more about me 🤵🏻 ? Check out my portfolio."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@400;500;600&display=swap">  -->
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#333333" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <meta property="og:title" content="Ibtesam | Portfolio" />
+    <meta property="og:description" content="Want to know more about me 🤵🏻 ? Check out my portfolio." />
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/personal-4f912.appspot.com/o/portfolio.PNG?alt=media&token=175c9713-8c16-4184-9228-15ba86744d22" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://ibtesam.netlify.app/" />
+    <meta property="og:type" content="website" />
+
+
+
+
     <title>Ibtesam | Portfolio</title>
   </head>
   <body style="margin: 0; padding: 0; font-family: 'Roboto'; background-color: #f5f5f5;">
