--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <meta property="og:image:height" content="630" />
     <meta property="og:url" content="https://ibtesam.netlify.app/" />
     <meta property="og:type" content="website" />
+    <meta name="author" content="Ibtesam Ansari">
 
 
 
