--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <meta property="og:title" content="Ibtesam | Portfolio" />
     <meta property="og:description" content="Want to know more about me 🤵🏻 ? Check out my portfolio." />
-    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/personal-4f912.appspot.com/o/portfolio.PNG?alt=media&token=175c9713-8c16-4184-9228-15ba86744d22" />
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/personal-b6d5b.appspot.com/o/Portfolio%2FCapture.PNG?alt=media&token=9afdb5b9-6f8c-4282-b53a-b8b33a2fb4b8" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:url" content="https://ibtesam.netlify.app/" />
