--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/personal-b6d5b.appspot.com/o/Portfolio%2FCapture.PNG?alt=media&token=9afdb5b9-6f8c-4282-b53a-b8b33a2fb4b8" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:url" content="https://ibtesam.netlify.app/" />
+    <meta property="og:url" content="https://ibtesam.site/" />
     <meta property="og:type" content="website" />
     <meta name="author" content="Ibtesam Ansari">
 
